--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <base href="tw-map">
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon"
+          href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📜</text></svg>">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="TW Thrall Map"
+      content="Contains locations of the TW thralls."
     />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
           rel="stylesheet">
@@ -30,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>TW Thrall Map</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
